--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "pouchdb-plugin-seed",
+  "name": "pouchdb-all-dbs",
   "version": "0.1.0",
-  "description": "PouchDB Plugin Seed project",
+  "description": "PouchDB allDbs plugin",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/pouchdb/plugin-seed.git"
+    "url": "git://github.com/nolanlawson/pouchdb-all-dbs.git"
   },
   "keywords": [
     "pouch",
@@ -18,7 +18,7 @@
   "author": "",
   "license": "Apache",
   "bugs": {
-    "url": "https://github.com/pouchdb/plugin-seed/issues"
+    "url": "https://github.com/nolanlawson/pouchdb-all-dbs./issues"
   },
   "scripts": {
     "test-node": "TEST_DB=testdb istanbul test ./node_modules/mocha/bin/_mocha test/test.js",
@@ -32,10 +32,11 @@
     "coverage": "npm test --coverage && istanbul check-coverage --lines 100 --function 100 --statements 100 --branches 100"
   },
   "dependencies": {
-    "lie": "^2.6.0",
-    "inherits": "~2.0.1",
     "argsarray": "0.0.1",
-    "es3ify": "^0.1.3"
+    "es3ify": "^0.1.3",
+    "inherits": "~2.0.1",
+    "lie": "^2.6.0",
+    "tiny-queue": "^0.2.0"
   },
   "devDependencies": {
     "bluebird": "^1.0.7",
@@ -62,7 +63,7 @@
   },
   "browserify": {
     "transform": [
-      "./node_modules/es3ify"
+      "es3ify"
     ]
   }
 }
