--- a/package.json
+++ b/package.json
@@ -40,20 +40,20 @@
   },
   "devDependencies": {
     "bluebird": "^1.0.7",
-    "browserify": "~2.36.0",
-    "chai": "~1.8.1",
-    "chai-as-promised": "~4.1.0",
+    "browserify": "^12.0.2",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "http-server": "~0.5.5",
     "istanbul": "^0.2.7",
-    "jshint": "~2.3.0",
-    "mocha": "~1.18",
-    "phantomjs": "^1.9.7-5",
-    "pouchdb-memory": "^1.0.0",
+    "jshint": "~2.8.0",
+    "mocha": "^2.4.5",
+    "phantomjs-prebuilt": "^2.1.7",
+    "pouchdb": "^5.4.0",
     "request": "^2.36.0",
-    "sauce-connect-launcher": "^0.4.2",
-    "selenium-standalone": "^3.0.2",
+    "sauce-connect-launcher": "^0.14.0",
+    "selenium-standalone": "^5.1.0",
     "uglify-js": "^2.4.13",
-    "watchify": "~0.4.1",
+    "watchify": "^3.1.0",
     "wd": "^0.2.21"
   },
   "browser": {
