fix firefox tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ services:
 
 node_js:
   - "5"
+sudo: false
+addons:
+  firefox: "41.0.1"
 script: npm run $COMMAND
 before_script:
   - "export DISPLAY=:99.0"
@@ -15,7 +18,7 @@ before_script:
 env:
   matrix:
   - COMMAND=test
-  - CLIENT=selenium:firefox COMMAND=test
+  - CLIENT=selenium:firefox:41.0.1 COMMAND=test
   - CLIENT=selenium:phantomjs COMMAND=test
   - COMMAND=coverage
 
