--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pouchdb-all-dbs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "PouchDB allDbs plugin",
   "main": "lib/index.js",
   "repository": {
@@ -64,5 +64,8 @@
       "es3ify"
     ]
   },
-  "files": ["lib", "dist"]
+  "files": [
+    "lib",
+    "dist"
+  ]
 }
