--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: node_js
 
+services:
+  - couchdb
+
 node_js:
   - "14"
 sudo: false
 script: npm run $COMMAND
+before_script:
+  - curl -X PUT localhost:5984/test
 
 env:
   matrix:
